2010-11-03  Colin Watson  <cjwatson@debian.org>

	Build cleanly with -DGSEAL_ENABLE.

	* configure.ac (PKG_CHECK_MODULES): Bump gtk+-2.0 requirement to
	2.20.
	* src/gui.c (cb_about, cb_drag): Use accessor functions rather than
	direct field access.
	* src/pixpack.c (pixpack_init, pixpack_realize, pixpack_unrealize,
	pixpack_paint): Likewise.
	* src/prefs.c (prefs_show): Likewise.
	* NEWS: Document this.

2010-03-07  Colin Watson  <cjwatson@debian.org>

	* src/http.c (get_the_image): Remove unused variables output,
	bytes_written, and http_proxy.
	* src/view.c (tele_view_update_pixmap): Remove unused variables
	width and height.

2010-01-02  Colin Watson  <cjwatson@debian.org>

	* configure.ac, NEWS: Version 0.1.2 (post-release increment).

2010-01-02  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (CLEANFILES): Add telegnome.desktop.

2009-04-28  Colin Watson  <cjwatson@debian.org>

	* src/prefs.c (prefs_show, construct_channels_page, edit_channel):
	Convert from GTK+ signals to GLib signals.
	* src/gui.c (new_toolbar): Likewise (albeit in commented-out code).

2009-04-28  Colin Watson  <cjwatson@debian.org>

	Update intltool handling.

	* telegnome.desktop: Rename to ...
	* telegnome.desktop.in: ... this. Move translations to ...
	* po/fr.po, po/nl.po, po/pt_BR.po: ... here.

	* Makefile.am (EXTRA_DIST): Replace telegnome.desktop with
	telegnome.desktop.in. Add intltool-extract.in, intltool-merge.in, and
	intltool-update.in.
	(DISTCLEANFILES): Add intltool-extract, intltool-merge, and
	intltool-update.
	Use @INTLTOOL_DESKTOP_RULE@.
	* configure.ac: Call IT_PROG_INTLTOOL.

	* po/LINGUAS: Reformat to one language per line. Add pt_BR.
	* po/POTFILES.in: Add telegnome.desktop.in.
	* po/*.po: Update.

	* .gitignore, po/.gitignore: Update.

2009-04-28  Colin Watson  <cjwatson@debian.org>

	* telegnome.desktop: Add Categories field.

2009-04-28  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Add MAINTAINERS and telegnome.doap.
